{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 59,
  "lineage": "6567f160-9f56-8a33-c6f1-e4d98e249dae",
  "resources": [
    {
      "module": "module.control0",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/disks/control0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/k8sstudy1120/zones/asia-east2-a/instances/control0",
            "instance_id": "8417710241007008620",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "x601ArhNQlM=",
            "name": "control0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
                "network_ip": "10.210.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc",
                "subnetwork_project": "k8sstudy1120"
              }
            ],
            "project": "k8sstudy1120",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/instances/control0",
            "service_account": [
              {
                "email": "1002860892732-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8scontrol"
            ],
            "tags_fingerprint": "aFyUv3GDEf0=",
            "zone": "asia-east2-a"
          }
        }
      ]
    },
    {
      "module": "module.k8s-allow-external",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-12-08T08:22:33.167-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k8sstudy1120/global/firewalls/k8s-allow-external",
            "log_config": [],
            "name": "k8s-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
            "priority": 1000,
            "project": "k8sstudy1120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/firewalls/k8s-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8scontrol"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.k8s-allow-healthcheck",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-12-07T08:15:01.623-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k8sstudy1120/global/firewalls/k8s-allow-healthcheck",
            "log_config": [],
            "name": "k8s-allow-healthcheck",
            "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
            "priority": 1000,
            "project": "k8sstudy1120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/firewalls/k8s-allow-healthcheck",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.k8s-allow-internal",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ipip"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-12-07T08:07:32.502-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k8sstudy1120/global/firewalls/k8s-allow-internal",
            "log_config": [],
            "name": "k8s-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
            "priority": 1000,
            "project": "k8sstudy1120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/firewalls/k8s-allow-internal",
            "source_ranges": [
              "10.200.0.0/16",
              "10.210.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.k8s-allow-ssh",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-12-07T07:58:38.000-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/k8sstudy1120/global/firewalls/k8s-allow-ssh",
            "log_config": [],
            "name": "k8s-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
            "priority": 1000,
            "project": "k8sstudy1120",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/firewalls/k8s-allow-ssh",
            "source_ranges": [
              "112.118.252.121"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8scontrol",
              "k8snode"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.k8s-ip",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.92.70.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-12-07T06:30:10.948-08:00",
            "id": "projects/k8sstudy1120/regions/asia-east2/addresses/k8s-ip",
            "name": "k8s-ip",
            "network_tier": "PREMIUM",
            "project": "k8sstudy1120",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/addresses/k8s-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/forwardingRules/k8s-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom-k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/k8sstudy1120/global/networks/k8s-network",
            "mtu": 0,
            "name": "k8s-network",
            "project": "k8sstudy1120",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network"
          }
        }
      ]
    },
    {
      "module": "module.k8s-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-07T06:48:29.737-08:00",
            "gateway_address": "10.210.0.1",
            "id": "projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc",
            "ip_cidr_range": "10.210.0.0/16",
            "name": "k8s-vpc",
            "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "k8sstudy1120",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc"
          },
          "dependencies": [
            "module.k8s-vpc.google_compute_network.custom-k8s"
          ]
        }
      ]
    },
    {
      "module": "module.node0",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/disks/node0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/k8sstudy1120/zones/asia-east2-a/instances/node0",
            "instance_id": "4065390820774378348",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "x601ArhNQlM=",
            "name": "node0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
                "network_ip": "10.210.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc",
                "subnetwork_project": "k8sstudy1120"
              }
            ],
            "project": "k8sstudy1120",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/instances/node0",
            "service_account": [
              {
                "email": "1002860892732-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8snode"
            ],
            "tags_fingerprint": "0ny65oJSFl0=",
            "zone": "asia-east2-a"
          }
        }
      ]
    },
    {
      "module": "module.node1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/disks/node1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/k8sstudy1120/zones/asia-east2-a/instances/node1",
            "instance_id": "8660733036942993611",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "x601ArhNQlM=",
            "name": "node1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
                "network_ip": "10.210.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc",
                "subnetwork_project": "k8sstudy1120"
              }
            ],
            "project": "k8sstudy1120",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/instances/node1",
            "service_account": [
              {
                "email": "1002860892732-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8snode"
            ],
            "tags_fingerprint": "0ny65oJSFl0=",
            "zone": "asia-east2-a"
          }
        }
      ]
    },
    {
      "module": "module.node2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201201",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/disks/node2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/k8sstudy1120/zones/asia-east2-a/instances/node2",
            "instance_id": "7970912343757813461",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "x601ArhNQlM=",
            "name": "node2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.92.164.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/global/networks/k8s-network",
                "network_ip": "10.210.0.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/regions/asia-east2/subnetworks/k8s-vpc",
                "subnetwork_project": "k8sstudy1120"
              }
            ],
            "project": "k8sstudy1120",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8sstudy1120/zones/asia-east2-a/instances/node2",
            "service_account": [
              {
                "email": "1002860892732-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8snode"
            ],
            "tags_fingerprint": "0ny65oJSFl0=",
            "zone": "asia-east2-a"
          }
        }
      ]
    }
  ]
}